# language-mcp

./: .gitignore  DEPLOYMENT_SUMMARY.md  DOC_SEARCH_GUIDE.md  EXAMPLES.md  INSTALL.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  STATUS.md  VERSION_2.0_SUMMARY.md  claude_desktop_config.json  package-lock.json  package.json  pyproject.toml  setup-integration.sh
examples/go-sample/: main.go  main_test.go
examples/node-sample/: users.test.ts  users.ts
examples/python-sample/: test_users.py  users.py
src/: index.ts
src/analyzers/: docs.ts  golang.ts  node.ts  projects.ts  python.ts
src/doc-servers/: server-manager.ts
src/language_mcp/: __init__.py  analyzer.py  doc_server.py  docs.py  language_detector.py  linter.py  server.py  worker.py
src/language_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/project-discovery/: file-watcher.ts  indexer.ts  registry.ts  scanner.ts
src/scheduler/: doc-scheduler.ts
src/scrapers/: doc-scraper.ts
src/vector-db/: manager.ts
tests/: __init__.py  test_analyzer.py  test_doc_server.py  test_docs.py  test_language_detector.py  test_linter.py  test_worker.py
